--- a/front/package.json
+++ b/front/package.json
@@ -5,13 +5,44 @@
   "repository": "git@github.com:TamtamHero/Ledger-Life.git",
   "author": "Jxan",
   "license": "MIT",
-  "scripts": {
-    "prettier": "prettier --write \"*.{js,json}\""
-  },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "bignumber.js": "^9.0.1",
     "prettier": "^2.2.1",
-    "express": "^4.17.1",
-    "path": "^0.12.7",
-    "ws": "^7.4.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "truffle": "^5.1.56",
+    "truffle-contract": "^4.0.31",
+    "web-vitals": "^0.2.4",
+    "web3": "^1.3.0"
+  },
+  "scripts": {
+    "prettier": "prettier --write \"src/**/*.{js,json}\"",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "link-contracts": "cd src && ln -s ../solidity/build/contracts contracts"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
