--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bignumber.js": "^9.0.1",
+    "p5": "^1.1.9",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-p5": "^1.3.6",
     "react-scripts": "4.0.1",
     "truffle": "^5.1.56",
     "truffle-contract": "^4.0.31",
